--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,80 +1,39 @@
-.navbar{
+.navb{
+    background-color: #474747;
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    z-index: 1;
+}
+
+.navb ul{
     display: flex;
     align-items: center;
-    background-color: #0099CC;
-    color: #fff;
+    justify-content: end;
+    height: 100%;
+    margin-right: 40px;
 }
 
-.tittle{
-    width: 50%;
-}
-
-.navItems{
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 50px;
-}
-
-.btn{
-    border: 2px solid #0099CC;
-    border-radius: 6px;
-    color: #000;
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
+.navb ul li{
+    list-style: none;
+    margin: 0 10px;
     transition-duration: 0.4s;
-    cursor: pointer;
-    text-transform: uppercase;
+    padding: 15px 0;
 }
 
-.btn:hover {
-    background-color: #008CBA;
+.navb ul li a{
+    padding: 8px;
+    border-radius: 5px;
+    text-decoration: none;
     color: #fff;
+    cursor: pointer;
+    transition-duration: 1s;
 }
 
-@media (max-width: 1320px){
-    .btn{
-        padding: 12px 24px;
-        font-size: 14px;
-    }
+.navb ul .item-effect a{
+    background-color: #6e6e6e;
 }
 
-@media (max-width: 1040px){
-    .btn{
-        padding: 10px 20px;
-        font-size: 12px;
-    }
-}
-
-@media (max-width: 910px){
-    .btn{
-        padding: 8px 16px;
-        font-size: 10px;
-    }
-}
-
-@media (max-width: 768px){
-    .navbar{
-        flex-direction: column;
-    }
-    .navItems{
-        width: 80%;
-        padding: 20px;
-    }
-}
-
-@media (max-width: 450px){
-    .navbar{
-        flex-direction: column;
-    }
-    .tittle{
-        width: 100%;
-    }
-    .navItems{
-        width: 100%;
-        padding: 0 10px;
-    }
+.navb ul .item-effect a:hover{
+    background-color: #cccccc;
 }
