--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,19 +1,49 @@
 .item-detail{
     width: 55%;
-    margin: 100px auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border: 1px solid #c9c9c9;
     border-radius: 5px;
     overflow: hidden;
+    grid-template-areas: "img card-info" "img buttons-detail";
 }
 
 .item-detail img{
     width: 100%;
     height: 100%;
+    grid-area: img;
 }
 
+.buttons-detail{
+    grid-area: buttons-detail;
+    background-color: #cccccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.card-info{
+    grid-area: card-info;
+}
+
+.link-detail{
+    margin: 10px 0;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    background-color: #6e6e6e;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 8px;
+    transition-duration: 1s;
+}
+
+.link-detail:hover{
+    background-color: #fff;
+    color: #000;
+}
 
 @media (max-width: 1450px){
     .item-detail{
@@ -47,9 +77,11 @@
 
 @media (max-width: 1000px){
     .item-detail{
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-areas: "img" "card-info" "buttons-detail";
     }
 }
+
 
 @media (max-width: 820px){
     .item-detail{
