--- a/src/components/ItemCart/ItemCart.css
+++ b/src/components/ItemCart/ItemCart.css
@@ -3,6 +3,7 @@
     border-radius: 15px;
     padding: 8px;
     display: flex;
+    align-items: center;
     background-color: #474747;
     color: #fff;
     position: relative;
@@ -13,7 +14,21 @@
     margin: 0 30px;
 }
 
+
 .price{
-    right: 0;
+    right: 4%;
     position: absolute;
+}
+
+
+.button-cart{
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    right: 0;
+    background-color: #ff4848;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 0 15px 15px 0;
 }
