--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,16 +1,24 @@
 .item-detail{
     width: 55%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     border: 1px solid #c9c9c9;
     border-radius: 5px;
     overflow: hidden;
+    /*
+    grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "img card-info" "img buttons-detail";
+    */
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-areas: "img" "card-info" "buttons-detail";
+    height: 80vh;
 }
 
-.item-detail img{
-    width: 100%;
-    height: 100%;
+.img{
+    border-bottom: 1px solid #c9c9c9;
+}
+
+.item-detail .img img{
+    height: 45vh;
     grid-area: img;
 }
 
@@ -24,6 +32,9 @@
 
 .card-info{
     grid-area: card-info;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .link-detail{
