--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -76,3 +76,19 @@
         grid-template-areas: "total total" "purchase remove-all";
     }
 }
+
+.cart-null{
+    margin-left: 20%;
+    margin-top: 100px;
+    width: 100%;
+    height: 89vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (max-width: 600px){
+    .cart-null{
+        margin-left: 30%;
+    }
+}
