--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -4,10 +4,6 @@
     border: 1px solid #c9c9c9;
     border-radius: 5px;
     overflow: hidden;
-    /*
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "img card-info" "img buttons-detail";
-    */
     grid-template-columns: repeat(1, 1fr);
     grid-template-areas: "img" "card-info" "buttons-detail";
     height: 80vh;
@@ -54,6 +50,12 @@
 .link-detail:hover{
     background-color: #fff;
     color: #000;
+}
+
+.no-stock{
+    font-size: 20px;
+    position: relative;
+    top: 7px;
 }
 
 @media (max-width: 1450px){
