--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -3,18 +3,17 @@
     font-family: 'Roboto', sans-serif;
 }
 
-.title-page{
-    color: #000000;
-}
-
-.title-page{
-    padding: 100px 0;
-}
-
 .item-list-container{
     width: 80%;
     margin-left: 20%;
     margin-right: 0;
+}
+
+.item-list-filter{
+    width: 80%;
+    margin-left: 20%;
+    margin-right: 0;
+    margin-top: 100px;
 }
 
 @media (max-width: 600px){
