--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,18 @@
     height: 10vh;
     position: fixed;
     z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.brand{
+    color: #fff;
+    margin-left: 4vw;
+    position: relative;
+    top: 7px;
+    font-size: x-large;
+    font-weight: bold;
 }
 
 .navb ul{
@@ -11,7 +23,9 @@
     align-items: center;
     justify-content: end;
     height: 100%;
-    margin-right: 40px;
+    margin-right: 4vw;
+    position: relative;
+    top: 7px;
 }
 
 .navb ul li{
@@ -39,8 +53,19 @@
     color: #242424;
 }
 
-@media (max-width: 500px){
+@media(max-width: 650px){
     .navb ul li a{
         font-size: x-small;
+    }
+    .brand{
+    font-size: large;
+    }
+}
+@media(max-width: 510px){
+    .navb ul li a{
+        font-size: x-small;
+    }
+    .brand{
+        font-size: medium;
     }
 }
