--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -14,18 +14,19 @@
 .sidebar-link{
     color: #303440;
     display: block;
-    padding: 15px 0;
+    padding: 15px;
     text-decoration: none;
     transition-duration: 0.4s;
 }
 
 .sidebar-link:hover{
-    color: #000;
-    border-bottom: 1px solid #000;
+    background-color: #6e6e6e;
+    color: #cccccc;
 }
 
 .sidebar-link:focus{
-    color: #000;
+    background-color: #474747;
+    color: #cccccc;
 }
 
 .list{
@@ -55,3 +56,12 @@
         width: 30%;
     }
 }
+
+@media (max-width: 750px){
+    .list-item{
+        position: relative;
+        right: 30px;
+        width: 120%;
+    }
+}
+
