--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -2,6 +2,7 @@
     margin-left: 20%;
     margin-top: 100px;
     height: 89vh;
+    width: 90vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,11 +16,8 @@
     padding: 15px;
 }
 
-.about-title{
-    color: #000;
-    font-size: xx-large;
-    font-weight: bold;
-    margin-bottom: 50px;
+.about-logo{
+    margin-bottom: 40px;
 }
 
 @media(max-width:600px){
