--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,13 +9,8 @@
     justify-content: space-between;
 }
 
-.brand{
-    color: #fff;
-    margin-left: 4vw;
-    position: relative;
-    top: 7px;
-    font-size: x-large;
-    font-weight: bold;
+.img-logo{
+    margin-left: 3vw;
 }
 
 .navb ul{
@@ -59,6 +54,12 @@
     }
     .brand{
     font-size: large;
+    }
+    .navb ul{
+        padding-left: 0;
+    }
+    .img-logo{
+        margin: 0;
     }
 }
 @media(max-width: 510px){
