--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -20,9 +20,10 @@
     margin-bottom: 40px;
 }
 
-@media(max-width:600px){
+@media(max-width:700px){
     .about-us{
-        margin-left: 30%;
+        margin-left: 0;
+        width: 100%;
     }
 }
 
