--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -6,9 +6,10 @@
     height: 89vh;
 }
 
-@media (max-width: 600px){
+@media (max-width: 700px){
     .cart-container{
-        margin-left: 30%;
+        width: 100%;
+        margin-left: 0;
     }
 }
 
@@ -87,8 +88,9 @@
     align-items: center;
 }
 
-@media (max-width: 600px){
+@media (max-width: 700px){
     .cart-null{
-        margin-left: 30%;
+        width: 100%;
+        margin-left: 0;
     }
 }
