--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -28,8 +28,9 @@
     align-items: center;
 }
 
-@media (max-width: 600px){
+@media (max-width: 700px){
     .checkout-container, .checkout{
-        margin-left: 30%;
+        width: 100%;
+        margin-left: 0;
     }
 }
