--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -3,7 +3,7 @@
     border: 1px solid #c9c9c9;
     border-radius: 5px;
     width: 100%;
-    height: 100%;
+    height: 470px;
     overflow: hidden;
     transition-duration: 0.4s;
 }
@@ -17,7 +17,7 @@
     box-shadow: 0px 3px 20px 5px #a0a0a0;
 }
 
-.card-info{
+.card-info-list{
     text-align: start;
     margin: 15px;
 }
@@ -42,6 +42,9 @@
 }
 
 @media (max-width: 1500px){
+    .card-car{
+        height: 400px;
+    }
     .card-car img{
         height: 15rem;
     }
@@ -49,7 +52,7 @@
 
 @media (max-width: 1250px){
     .card-car img{
-        height: 12.5rem;
+        height: 14rem;
     }
 }
 
@@ -60,25 +63,28 @@
 }
 
 @media (max-width: 900px){
+    .card-car{
+        height: 370px;
+    }
     .card-car img{
         height: 12.5rem;
     }
 }
 
 @media (max-width: 700px){
+    .card-car{
+        height: 450px;
+    }
     .card-car img{
         height: 20rem;
     }
 }
 
 @media (max-width: 500px){
+    .card-car{
+        height: 385px;
+    }
     .card-car img{
         height: 15rem;
-    }
-}
-
-@media (max-width: 450px){
-    .card-car img{
-        height: 12rem;
     }
 }
