--- a/src/components/ItemDetailContainer/ItemDetailContainer.css
+++ b/src/components/ItemDetailContainer/ItemDetailContainer.css
@@ -9,9 +9,9 @@
     align-items: center;
 }
 
-@media (max-width: 600px){
+@media (max-width: 700px){
     .item-detail-container{
-        width: 70%;
-        margin-left: 30%;
+        width: 100%;
+        margin-left: 0;
     }
 }
