--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -21,4 +21,8 @@
         width: 100%;
         margin-left: 0%;
     }
+    .item-list-filter{
+        width: 100%;
+        margin-left: 0;
+    }
 }
