nest hub responsive

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navb{
     background-color: #474747;
     width: 100%;
-    height: 10vh;
+    height: 93.69px;
     position: fixed;
     z-index: 1;
     display: flex;
